--- a/.github/workflows/birthday.yml
+++ b/.github/workflows/birthday.yml
@@ -2,8 +2,7 @@ name: Birthday Bot
 
 on:
   schedule:
-    # Har kuni 03:00 UTC → Toshkent vaqti 08:00
-    - cron: "0 3 * * *"
+    - cron: "0 3 * * *"  # Har kuni 03:00 UTC → Toshkent 08:00
   workflow_dispatch:
 
 jobs:
@@ -11,16 +10,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Repositoryni klonlash
       - uses: actions/checkout@v4
 
-      # 2️⃣ Python o'rnatish
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      # 3️⃣ Kerakli kutubxonalarni o'rnatish
-      - run: pip install pandas python-telegram-bot
+      - run: pip install "python-telegram-bot==20.3" pandas
 
-      # 4️⃣ Botni ishga tushirish
       - run: python bot.py
