Update birthday.yml for better readability

--- a/.github/workflows/birthday.yml
+++ b/.github/workflows/birthday.yml
@@ -2,16 +2,20 @@ name: Birthday Bot
 
 on:
   schedule:
-    - cron: "0 3 * * *"
+    - cron: "0 3 * * *"   # UTC 03:00 = Toshkent 08:00
   workflow_dispatch:
 
 jobs:
   run:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
+
       - run: pip install pandas python-telegram-bot==13.15
+
       - run: python bot.py
