--- a/.github/workflows/birthday.yml
+++ b/.github/workflows/birthday.yml
@@ -1,21 +1,28 @@
 name: Birthday Bot
 
 on:
+  # Har kuni Toshkent vaqti bilan soat 08:00 da ishga tushadi
   schedule:
-    - cron: "0 3 * * *"   # UTC 03:00 = Toshkent 08:00
-  workflow_dispatch:
+    - cron: "0 3 * * *" # UTC 03:00 = Toshkent 08:00
+  workflow_dispatch: # Qo'lda ham ishga tushirish imkoniyati
 
 jobs:
-  run:
+  run-bot:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Kodni klonlash
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v4
+      - name: Python o'rnatish
+        uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: '3.10'
 
-      - run: pip install pandas python-telegram-bot==13.15
+      - name: Kerakli kutubxonalarni o'rnatish
+        run: |
+          pip install --upgrade pip
+          pip install pandas python-telegram-bot==20.3
 
-      - run: python bot.py
+      - name: Botni ishga tushirish
+        run: python bot.py
