--- a/.github/workflows/birthday.yml
+++ b/.github/workflows/birthday.yml
@@ -2,7 +2,7 @@ name: Birthday Bot
 
 on:
   schedule:
-    - cron: "25 3 * * *"   # UTC 03:25 = Toshkent 08:25
+    - cron: "*/10 * * * *"   # har 10 minut tekshiradi
   workflow_dispatch:
 
 jobs:
@@ -18,10 +18,10 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Kerakli kutubxonalarni o'rnatish
+      - name: Kutubxonalarni o'rnatish
         run: |
           pip install --upgrade pip
-          pip install pandas python-telegram-bot==20.3
+          pip install pandas python-telegram-bot==20.3 pytz
 
       - name: Botni ishga tushirish
         run: python bot.py
